Bug 1178354 - Ensure we fire a before-first-paint event for printing as well. r=tn